верстка Sidebar в свернутом состоянии

--- a/src/shared/i18n/locales/ru.json
+++ b/src/shared/i18n/locales/ru.json
@@ -34,5 +34,6 @@
   "Целевые-статьи": "Целевые статьи",
   "help": "Помощь",
   "mail": "Почта",
-  "notifications": "Уведомления"
+  "notifications": "Уведомления",
+  "copyright": "© 2024 Гравитино Закупки. All Rights Reserved."
 }
