--- a/src/shared/i18n/locales/ru.json
+++ b/src/shared/i18n/locales/ru.json
@@ -1,4 +1,39 @@
 {
-  "title": "AZD",
-  "test-button": "Тестовая кнопка"
+  "app-name": "Гравитино Закупки",
+  "test-button": "Тестовая кнопка",
+  "dashboard": "Дашборд",
+  "navigation": "Навигация",
+  "44-FZ": "44-ФЗ",
+  "budget-liabilities-limits": "Лимиты бюджетных обязательств",
+  "create-limits": "Создать лимиты",
+  "all-limits": "Все лимиты",
+  "schedules": "Планы-графики",
+  "init-schedule": "Инициировать план-график",
+  "all-schedules": "Все планы-графики",
+  "summary-schedule": "Сводный план-график",
+  "publication-in-EIS": "Публикация в ЕИС",
+  "purchase": "Закупки",
+  "purchase-offer": "Предложение на закупку",
+  "all-purchase": "Все закупки",
+  "goods-and-services": "Товары и услуги",
+  "223-FZ": "223-ФЗ",
+  "handbook": "Справочники",
+  "rules": "Правила",
+  "organizations": "Организации",
+  "branches": "Филиалы",
+  "purchase-initiators": "Инициаторы закупки",
+  "users": "Пользователи",
+  "roles-and-permissions": "Права и роли",
+  "manage-properties": "Управление характеристиками",
+  "information": "Информация",
+  "administration": "Администрирование",
+  "КБК": "КБК",
+  "ОКПД2": "ОКПД2",
+  "КТРУ": "КТРУ",
+  "Нормирование": "Нормирование",
+  "Целевые-статьи": "Целевые статьи",
+  "help": "Помощь",
+  "mail": "Почта",
+  "notifications": "Уведомления",
+  "copyright": "© 2024 Гравитино Закупки. All Rights Reserved."
 }
