--- a/src/shared/i18n/locales/ru.json
+++ b/src/shared/i18n/locales/ru.json
@@ -47,5 +47,6 @@
     "last-edit-date": "Дата последнего редактирования",
     "branch": "Филиал",
     "status": "Статус",
-    "version": "Версия"
+    "version": "Версия",
+    "not.added": "Не указан"
 }
