--- a/src/shared/i18n/locales/ru.json
+++ b/src/shared/i18n/locales/ru.json
@@ -51,6 +51,7 @@
     "status": "Статус",
     "version": "Версия",
     "not.added": "Не указан",
+    "nothing.found": "Ничего не найдено",
     "last.name": "Фамилия",
     "first.name": "Имя",
     "patronymic": "Отчество",
@@ -61,6 +62,8 @@
     "fio": "ФИО",
     "phone": "Номер телефона",
     "error": {
+        "title": "Ошибка",
+        "default": "Произошла ошибка, повторите попытку позднее.",
         "password.length": "Пароль должен содержать не меньше 6 символов",
         "email.format": "Email должен быть в формате email@example.ru",
         "required": "Поле должно быть заполнено"
