Добавлено изменение пользователя

--- a/src/shared/i18n/locales/ru.json
+++ b/src/shared/i18n/locales/ru.json
@@ -74,6 +74,25 @@
     "action": {
         "add": "Добавить",
         "cancel": "Отменить",
-        "save": "Сохранить"
+        "edit": "Изменить",
+        "delete": "Удалить",
+        "dropdown.menu.open": "Подробнее..."
+    },
+    "toast": {
+        "success": {
+            "create": {
+                "m": "{{entity}} успешно добавлен",
+                "f": "{{entity}} успешно добавлена",
+                "multiple": "{{entity}} успешно добавлены"
+            },
+            "update": {
+                "m": "{{entity}} успешно изменен",
+                "f": "{{entity}} успешно изменена"
+            },
+            "delete": {
+                "m": "{{entity}} удален",
+                "f": "{{entity}} удалена"
+            }
+        }
     }
 }
