Добавлено изменение статуса пользователя

--- a/src/shared/i18n/locales/ru.json
+++ b/src/shared/i18n/locales/ru.json
@@ -22,6 +22,7 @@
   "organizations": "Организации",
   "branches": "Филиалы",
   "purchase-initiators": "Инициаторы закупки",
+  "user": "Пользователь",
   "users": "Пользователи",
   "add.user": "Добавление пользователя",
   "manage.user": "Управление пользователем",
