Добавлено создание/изменение ролей

--- a/src/shared/i18n/locales/ru.json
+++ b/src/shared/i18n/locales/ru.json
@@ -27,6 +27,7 @@
   "add.user": "Добавление пользователя",
   "manage.user": "Управление пользователем",
   "roles-and-permissions": "Права и роли",
+  "permissions": "Права",
   "manage-properties": "Управление характеристиками",
   "information": "Информация",
   "administration": "Администрирование",
@@ -62,6 +63,7 @@
   "role": "Роль",
   "fio": "ФИО",
   "phone": "Номер телефона",
+  "name": "Название",
   "error": {
     "title": "Ошибка",
     "default": "Произошла ошибка, повторите попытку позднее.",
