--- a/src/shared/i18n/locales/ru.json
+++ b/src/shared/i18n/locales/ru.json
@@ -63,6 +63,7 @@
   "role": "Роль",
   "fio": "ФИО",
   "phone": "Номер телефона",
+  "name": "Название",
   "error": {
     "title": "Ошибка",
     "default": "Произошла ошибка, повторите попытку позднее.",
