--- a/src/shared/i18n/locales/ru.json
+++ b/src/shared/i18n/locales/ru.json
@@ -106,6 +106,8 @@
   "all.organizations": "Все организации",
   "add.organization": "Добавление организации",
   "manage.organization": "Управление организацией",
+  "add.branch": "Добавление филиала",
+  "manage.branch": "Управление филиалом",
   "organization.type": "Тип организации",
   "organization": {
     "title": "Организация",
