Обновлены разделы инициации закупки

--- a/src/shared/i18n/locales/ru.json
+++ b/src/shared/i18n/locales/ru.json
@@ -72,7 +72,8 @@
     "password.length": "Пароль должен содержать не меньше 6 символов",
     "email.format": "Email должен быть в формате email@example.ru",
     "number.format": "Неправильный формат числа. Пример: 12345.67",
-    "required": "Поле должно быть заполнено"
+    "required": "Поле должно быть заполнено",
+    "min.select": "Минимальное количество значений: {{min}}"
   },
   "placeholder": {
     "select": "Выберите значение из выпадающего списка",
@@ -82,12 +83,14 @@
     "add": "Добавить",
     "next": "Следующий шаг",
     "skip": "Пропустить шаг",
+    "back": "Вернуться назад",
     "cancel": "Отменить",
     "edit": "Изменить",
     "delete": "Удалить",
     "dropdown.menu.open": "Подробнее...",
     "select.all": "Выбрать все",
-    "unselect.all": "Убрать все"
+    "unselect.all": "Убрать все",
+    "attach.document": "Прикрепить документ"
   },
   "toast": {
     "success": {
@@ -143,5 +146,12 @@
   "send-commercial-offer": "Отправить коммерческое предложение",
   "nmck": "Расчет НМЦК",
   "contract-project": "Проект контракта",
-  "done": "Готово"
+  "done": "Готово",
+  "attach.document.description": "Нажите на кнопку или перетащите документ в это окошко",
+  "units": {
+    "byte": "б",
+    "kb": "Кб",
+    "mb": "Мб",
+    "gb": "Гб"
+  }
 }
