Добавлена авторизация пользователя

--- a/src/shared/i18n/locales/ru.json
+++ b/src/shared/i18n/locales/ru.json
@@ -79,7 +79,9 @@
     "cancel": "Отменить",
     "edit": "Изменить",
     "delete": "Удалить",
-    "dropdown.menu.open": "Подробнее..."
+    "dropdown.menu.open": "Подробнее...",
+    "auth": "Войти",
+    "register": "Зарегистрироваться"
   },
   "toast": {
     "success": {
