--- a/src/shared/i18n/locales/ru.json
+++ b/src/shared/i18n/locales/ru.json
@@ -60,6 +60,7 @@
   "post": "Должность",
   "legal.basis": "Юридическое обоснование",
   "password": "Пароль",
+  "repeat-password": "Повторите пароль",
   "role": "Роль",
   "fio": "ФИО",
   "phone": "Номер телефона",
@@ -68,6 +69,7 @@
     "title": "Ошибка",
     "default": "Произошла ошибка, повторите попытку позднее.",
     "password.length": "Пароль должен содержать не меньше 6 символов",
+    "password.mismatch": "Пароли не совпадают",
     "email.format": "Email должен быть в формате email@example.ru",
     "required": "Поле должно быть заполнено"
   },
@@ -124,5 +126,8 @@
     "okpo": "ОКПО",
     "fax": "Факс"
   },
-  "clipboard-copy": "Скопировано в буфер обмена"
+  "clipboard-copy": "Скопировано в буфер обмена",
+  "provide.description": "Внимательно заполните все поля ниже",
+  "has.account": "Уже есть аккаунт?",
+  "no.account": "У вас ещё нет аккаунта?"
 }
