Рефактор и исправление ошибок

--- a/src/shared/i18n/locales/ru.json
+++ b/src/shared/i18n/locales/ru.json
@@ -7,6 +7,7 @@
   "budget-liabilities-limits": "Лимиты бюджетных обязательств",
   "create-limits": "Создать лимиты",
   "all-limits": "Все лимиты",
+  "limit-add": "Добавление лимита",
   "plans": "Планы-графики",
   "init-plan": "Инициировать план-график",
   "all-plans": "Все планы-графики",
