Изменения вкладки ТЗ

--- a/src/shared/i18n/locales/ru.json
+++ b/src/shared/i18n/locales/ru.json
@@ -153,5 +153,8 @@
     "kb": "Кб",
     "mb": "Мб",
     "gb": "Гб"
-  }
+  },
+  "products": "Продукты",
+  "product": "Продукт",
+  "product-name": "Название продукта"
 }
