Добавлена вкладка "Все закупки"

--- a/src/shared/i18n/locales/ru.json
+++ b/src/shared/i18n/locales/ru.json
@@ -1,6 +1,7 @@
 {
   "app-name": "Гравитино Закупки",
   "test-button": "Тестовая кнопка",
+  "home": "Главная",
   "dashboard": "Дашборд",
   "navigation": "Навигация",
   "44-FZ": "44-ФЗ",
@@ -168,5 +169,9 @@
   "quality-guarantee-period": "Срок гарантии качества, мес",
   "manufacturer-guarantee": "Срок гарантии производителя, мес",
   "start-date": "start-date",
-  "end-date": "Дата выполнения закупки"
+  "end-date": "Дата выполнения закупки",
+  "references": "Справочники",
+  "step": "Этап закупки",
+  "is-organization-fund": "Закупка за счет средств организации",
+  "is-unilateral-refusal": "Предусмотрена возможность одностороннего отказа от исполнения контракта в соответствии со ст. 95 Закона № 44-ФЗ"
 }
