--- a/src/shared/i18n/locales/ru.json
+++ b/src/shared/i18n/locales/ru.json
@@ -158,12 +158,14 @@
   },
   "products": "Товары",
   "product": "Товар",
-  "product-name": "Название товара",
+  "product-name": "Наименование товара или услуги",
   "empty-product-list": "Список товаров пуст. Добавьте новые товары.",
+  "empty-property-list": "Список характеристик пуст. Добавьте новые характеристики.",
+  "properties": "Функциональные, технические и качественные характеристики товара",
   "property-name": "Название характеристики",
   "property-value": "Значение характеристики",
   "property-measurement": "Единица измерения",
-  "code": "Код",
+  "product-code": "Код КТРУ/ОКПД2",
   "count": "Кол-во",
   "currency-code": "Код валюты",
   "quality-guarantee-period": "Срок гарантии качества, мес",
