Изменена карточка товара

--- a/src/shared/i18n/locales/ru.json
+++ b/src/shared/i18n/locales/ru.json
@@ -86,6 +86,7 @@
     "skip": "Пропустить шаг",
     "back": "Вернуться назад",
     "cancel": "Отменить",
+    "save": "Сохранить",
     "edit": "Изменить",
     "delete": "Удалить",
     "dropdown.menu.open": "Подробнее...",
@@ -164,7 +165,6 @@
   "properties": "Функциональные, технические и качественные характеристики товара",
   "property-name": "Название характеристики",
   "property-value": "Значение характеристики",
-  "property-measurement": "Единица измерения",
   "product-code": "Код КТРУ/ОКПД2",
   "count": "Кол-во",
   "currency-code": "Код валюты",
@@ -173,6 +173,7 @@
   "start-date": "start-date",
   "end-date": "Дата выполнения закупки",
   "references": "Справочники",
+  "measurement": "Единица измерения",
   "step": "Этап закупки",
   "is-organization-fund": "Закупка за счет средств организации",
   "is-unilateral-refusal": "Предусмотрена возможность одностороннего отказа от исполнения контракта в соответствии со ст. 95 Закона № 44-ФЗ"
