#619 Реализована авторизация/регистрация (#14)
* Добавлена проверка refresh и access

* Добавлена авторизация пользователя

* Добавлена регистрация

* added error message

* Добавлен элемент watermark

* Добавлены изображения

* Добавлено скрытие пароля

* Добавлен enum для ключей API

--- a/src/shared/i18n/locales/ru.json
+++ b/src/shared/i18n/locales/ru.json
@@ -61,6 +61,7 @@
   "post": "Должность",
   "legal.basis": "Юридическое обоснование",
   "password": "Пароль",
+  "repeat-password": "Повторите пароль",
   "role": "Роль",
   "fio": "ФИО",
   "phone": "Номер телефона",
@@ -69,6 +70,7 @@
     "title": "Ошибка",
     "default": "Произошла ошибка, повторите попытку позднее.",
     "password.length": "Пароль должен содержать не меньше 6 символов",
+    "password.mismatch": "Пароли не совпадают",
     "email.format": "Email должен быть в формате email@example.ru",
     "required": "Поле должно быть заполнено"
   },
@@ -80,7 +82,9 @@
     "cancel": "Отменить",
     "edit": "Изменить",
     "delete": "Удалить",
-    "dropdown.menu.open": "Подробнее..."
+    "dropdown.menu.open": "Подробнее...",
+    "auth": "Войти",
+    "register": "Зарегистрироваться"
   },
   "toast": {
     "success": {
@@ -123,5 +127,9 @@
     "okpo": "ОКПО",
     "fax": "Факс"
   },
-  "clipboard-copy": "Скопировано в буфер обмена"
+  "clipboard-copy": "Скопировано в буфер обмена",
+  "provide.description": "Внимательно заполните все поля ниже",
+  "has.account": "Уже есть аккаунт?",
+  "no.account": "У вас ещё нет аккаунта?",
+  "watermark": "© 2024 Сделано в Гравитино. All Rights Reserved."
 }
