Изменения вкладки НМЦК

--- a/src/shared/i18n/locales/ru.json
+++ b/src/shared/i18n/locales/ru.json
@@ -180,6 +180,7 @@
   "quality-guarantee-period": "Срок гарантии качества, мес",
   "manufacturer-guarantee": "Срок гарантии производителя, мес",
   "start-date": "start-date",
+  "start-max-price": "НМЦК, руб.",
   "end-date": "Дата выполнения закупки",
   "references": "Справочники",
   "measurement": "Единица измерения",
