Изменения инициации закупки

--- a/src/shared/i18n/locales/ru.json
+++ b/src/shared/i18n/locales/ru.json
@@ -152,7 +152,7 @@
   "warranty-obligations-enforcement": "Обеспечение гарантийных обязательств, руб.",
   "additional-info": "Дополнительная информация",
   "general-info": "Общая информация",
-  "technical-specification": "Техническое задание",
+  "technical-specification": "Описание технического задания",
   "commercial-offers": "Коммерческие предложения",
   "commercial-offer-text": "Текст коммерческого предложения",
   "send-commercial-offer": "Отправить коммерческое предложение",
@@ -166,7 +166,7 @@
     "mb": "Мб",
     "gb": "Гб"
   },
-  "products": "Товары",
+  "technical-specification-products": "Технические характеристики товаров и услуг",
   "product": "Товар",
   "product-name": "Наименование товара или услуги",
   "empty-product-list": "Список товаров пуст. Добавьте новые товары.",
@@ -179,7 +179,7 @@
   "currency-code": "Код валюты",
   "quality-guarantee-period": "Срок гарантии качества, мес",
   "manufacturer-guarantee": "Срок гарантии производителя, мес",
-  "start-date": "start-date",
+  "start-date": "Дата начала исполнения контракта",
   "start-max-price": "НМЦК, руб.",
   "end-date": "Дата выполнения закупки",
   "references": "Справочники",
