Добавлена вкладка "Исполнение контракта"

--- a/src/shared/i18n/locales/ru.json
+++ b/src/shared/i18n/locales/ru.json
@@ -90,6 +90,8 @@
     "back": "Вернуться назад",
     "cancel": "Отменить",
     "save": "Сохранить",
+    "save.and.next": "Сохранить и продолжить",
+    "complete": "Завершить",
     "edit": "Изменить",
     "delete": "Удалить",
     "dropdown.menu.open": "Подробнее...",
@@ -186,5 +188,7 @@
   "measurement": "Единица измерения",
   "step": "Этап закупки",
   "is-organization-fund": "Закупка за счет средств организации",
-  "is-unilateral-refusal": "Предусмотрена возможность одностороннего отказа от исполнения контракта в соответствии со ст. 95 Закона № 44-ФЗ"
+  "is-unilateral-refusal": "Предусмотрена возможность одностороннего отказа от исполнения контракта в соответствии со ст. 95 Закона № 44-ФЗ",
+  "contract-execution": "Исполнение контракта",
+  "executor": "Исполнитель"
 }
