Изменен элемент продукта

--- a/src/shared/i18n/locales/ru.json
+++ b/src/shared/i18n/locales/ru.json
@@ -173,7 +173,8 @@
   "product-name": "Наименование товара или услуги",
   "empty-product-list": "Список товаров пуст. Добавьте новые товары.",
   "empty-property-list": "Список характеристик пуст. Добавьте новые характеристики.",
-  "properties": "Функциональные, технические и качественные характеристики товара",
+  "technical-properties": "Функциональные, технические и качественные характеристики товара",
+  "properties": "Характеристики",
   "property-name": "Название характеристики",
   "property-value": "Значение характеристики",
   "product-code": "Код КТРУ/ОКПД2",
