Добавлена вкладка "Публикация в ЕИС"

--- a/src/shared/i18n/locales/ru.json
+++ b/src/shared/i18n/locales/ru.json
@@ -18,7 +18,7 @@
   "purchase-initiate": "Инициировать закупку",
   "initiate-purchase": "Инициализация закупки",
   "all-purchase": "Все закупки",
-  "purchase-type": "Тип закупки",
+  "purchase-type-id": "Тип закупки",
   "goods-and-services": "Товары и услуги",
   "223-FZ": "223-ФЗ",
   "handbook": "Справочники",
@@ -91,7 +91,7 @@
     "cancel": "Отменить",
     "save": "Сохранить",
     "save.and.next": "Сохранить и продолжить",
-    "complete": "Завершить",
+    "publish": "Опубликовать",
     "edit": "Изменить",
     "delete": "Удалить",
     "dropdown.menu.open": "Подробнее...",
@@ -174,6 +174,7 @@
   "empty-product-list": "Список товаров пуст. Добавьте новые товары.",
   "empty-property-list": "Список характеристик пуст. Добавьте новые характеристики.",
   "technical-properties": "Функциональные, технические и качественные характеристики товара",
+  "purchase-name": "Название закупки",
   "properties": "Характеристики",
   "property-name": "Название характеристики",
   "property-value": "Значение характеристики",
