--- a/src/shared/i18n/locales/ru.json
+++ b/src/shared/i18n/locales/ru.json
@@ -75,7 +75,8 @@
     "required": "Поле должно быть заполнено"
   },
   "placeholder": {
-    "select": "Выберите значение из выпадающего списка"
+    "select": "Выберите значение из выпадающего списка",
+    "multi.select": "Выберите значения из выпадающего списка"
   },
   "action": {
     "add": "Добавить",
@@ -84,7 +85,9 @@
     "delete": "Удалить",
     "dropdown.menu.open": "Подробнее...",
     "auth": "Войти",
-    "register": "Зарегистрироваться"
+    "register": "Зарегистрироваться",
+    "select.all": "Выбрать все",
+    "unselect.all": "Убрать все"
   },
   "toast": {
     "success": {
@@ -134,5 +137,7 @@
   "watermark": "© 2024 Сделано в Гравитино. All Rights Reserved.",
   "entity": "Сущность",
   "add-property": "Добавление характеристики",
-  "manage-property": "Управление характеристикой"
+  "manage-property": "Управление характеристикой",
+  "add-more": "Введите новое значение",
+  "add-more-description": "Нажмите Enter, чтобы добавить введенное значение"
 }
