Добавлено отображение значений у характеристик

--- a/src/shared/i18n/locales/ru.json
+++ b/src/shared/i18n/locales/ru.json
@@ -139,5 +139,14 @@
   "add-property": "Добавление характеристики",
   "manage-property": "Управление характеристикой",
   "add-more": "Введите новое значение",
-  "add-more-description": "Нажмите Enter, чтобы добавить введенное значение"
+  "add-more-description": "Нажмите Enter, чтобы добавить введенное значение",
+  "properties": {
+    "users": "Пользователи",
+    "branch": "Филиалы",
+    "organization": "Организации",
+    "purchase": "Закупки",
+    "plan": "Планы-графики",
+    "roles": "Роли"
+  },
+  "values": "Значения"
 }
