Добавлено поле PropertyField

--- a/src/shared/i18n/locales/ru.json
+++ b/src/shared/i18n/locales/ru.json
@@ -141,6 +141,7 @@
   "add-more": "Введите новое значение",
   "add-more-description": "Нажмите Enter, чтобы добавить введенное значение",
   "properties": {
+    "title": "Характеристики",
     "users": "Пользователи",
     "branch": "Филиалы",
     "organization": "Организации",
