Названия роутов перемещены в locale

--- a/src/shared/i18n/locales/ru.json
+++ b/src/shared/i18n/locales/ru.json
@@ -149,5 +149,6 @@
     "plan": "Планы-графики",
     "roles": "Роли"
   },
-  "values": "Значения"
+  "values": "Значения",
+  "home": "Главная"
 }
