Добавлена вкладка справочники

--- a/src/shared/i18n/locales/ru.json
+++ b/src/shared/i18n/locales/ru.json
@@ -18,6 +18,7 @@
   "all-purchase": "Все закупки",
   "goods-and-services": "Товары и услуги",
   "223-FZ": "223-ФЗ",
+  "all-handbook": "Все справочники",
   "handbook": "Справочники",
   "rules": "Правила",
   "organizations": "Организации",
