Добавлены таблицы справочников

--- a/src/shared/i18n/locales/ru.json
+++ b/src/shared/i18n/locales/ru.json
@@ -33,11 +33,11 @@
   "manage-properties": "Управление характеристиками",
   "information": "Информация",
   "administration": "Администрирование",
-  "КБК": "КБК",
-  "ОКПД2": "ОКПД2",
-  "КТРУ": "КТРУ",
-  "Нормирование": "Нормирование",
-  "Целевые-статьи": "Целевые статьи",
+  "kbk": "КБК",
+  "okpd": "ОКПД2",
+  "ktru": "КТРУ",
+  "okei": "ОКЕИ",
+  "kosgu": "КОСГУ",
   "help": "Помощь",
   "mail": "Почта",
   "notifications": "Уведомления",
@@ -132,5 +132,8 @@
   "provide.description": "Внимательно заполните все поля ниже",
   "has.account": "Уже есть аккаунт?",
   "no.account": "У вас ещё нет аккаунта?",
-  "watermark": "© 2024 Сделано в Гравитино. All Rights Reserved."
+  "watermark": "© 2024 Сделано в Гравитино. All Rights Reserved.",
+  "okpd-code": "Код ОКПД2",
+  "okei-code": "Код ОКЕИ",
+  "kosgu-code": "Код КОСГУ"
 }
