Обновлена валидация для страниц инициации закупки

--- a/src/shared/i18n/locales/ru.json
+++ b/src/shared/i18n/locales/ru.json
@@ -77,7 +77,8 @@
     "email.format": "Email должен быть в формате email@example.ru",
     "number.format": "Неправильный формат числа. Пример: 12345.67",
     "required": "Поле должно быть заполнено",
-    "min.select": "Минимальное количество значений: {{min}}"
+    "min.select": "Минимальное количество значений: {{min}}",
+    "form": "Некоторые поля заполнены неверно. Исправьте их, чтобы продолжить."
   },
   "placeholder": {
     "select": "Выберите значение из выпадающего списка",
@@ -100,7 +101,8 @@
     "select.all": "Выбрать все",
     "unselect.all": "Убрать все",
     "attach.document": "Прикрепить документ",
-    "calculate": "Рассчитать"
+    "calculate": "Рассчитать",
+    "check.and.publish": "Проверить и опубликовать"
   },
   "toast": {
     "success": {
@@ -192,5 +194,6 @@
   "is-organization-fund": "Закупка за счет средств организации",
   "is-unilateral-refusal": "Предусмотрена возможность одностороннего отказа от исполнения контракта в соответствии со ст. 95 Закона № 44-ФЗ",
   "contract-execution": "Исполнение контракта",
-  "executor": "Исполнитель"
+  "executor": "Исполнитель",
+  "publish-to-eis-description": "Проверка формы перед публикацией в ЕИС"
 }
